# NotAmongUs

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGLM.cmake
include/: Color.h  HUD.h  Imposter.h  Maze.h  Model.h  Player.h  RayTracing.h  Spawn.h  WindowHandler.h  shaders.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
resources/shaders/: mazeFragment.glsl  mazeVertex.glsl  modelFragment.glsl  modelVertex.glsl  stencilFragment.glsl  stencilVertex.glsl
src/: HUD.cpp  Imposter.cpp  Maze.cpp  Model.cpp  Player.cpp  RayTracing.cpp  Spawn.cpp  WindowHandler.cpp  main.cpp
